--- a/comparison/templates/comparison/comparison.html
+++ b/comparison/templates/comparison/comparison.html
@@ -8,9 +8,13 @@
 <body>
 {% block content %}
     <h1>Comparison</h1>
-    {{ form_company }}
-    {{ form_product }}
-    {{ form_parameter }}
+    <br>
+    <div>
+    {{ form_chipset }}
+    </div>
+    <div>
+    {{ form_benchmark }}
+    </div>
 
 {% endblock %}
 
