--- a/comparison/templates/comparison/base.html
+++ b/comparison/templates/comparison/base.html
@@ -50,8 +50,8 @@
 </head>
 <body>
 	<div class="wrapper">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#"><h2>Comparison</h2></a>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			<a class="navbar-brand" href="#"><h2>SPT Auto</h2></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  	</button>
@@ -72,8 +72,8 @@
 
 			{% endblock %}
 		</div>
-		<div class="footer bg-dark">
-			<p>&copy Comparison 2020</p>
+		<div class="footer bg-primary">
+			<p>&copy SPT Auto 2020</p>
 			<a class="alink" href="#">Privacy policy</a>&nbsp
 			<a class="alink" href="#">Contact us</a>
 		</div>
