--- a/comparison/templates/comparison/home.html
+++ b/comparison/templates/comparison/home.html
@@ -8,7 +8,7 @@
 <body>
 {% block content %}
 
-    <h1>HomePage</h1>
+    <h3>All the chipset names are here that can be compared as required.</h3>
     <form action="/" method="post" enctype="multipart/form-data" class="post-form">
     {% csrf_token %}
     {% for field in form.visible_fields %}
