--- a/comparison/templates/comparison/comparison.html
+++ b/comparison/templates/comparison/comparison.html
@@ -15,6 +15,10 @@
     <div>
     {{ form_benchmark }}
     </div>
+    <div>
+        <h1>Values</h1>
+        <p>{{ values }}</p>
+    </div>
 
 {% endblock %}
 
