--- a/comparison/templates/comparison/base.html
+++ b/comparison/templates/comparison/base.html
@@ -51,14 +51,14 @@
 <body>
 	<div class="wrapper">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			<a class="navbar-brand" href="#"><h2>SPT Auto</h2></a>
+			<a class="navbar-brand" href="{% url 'comparison:comparison' %}"><h2>SPT Auto</h2></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  	</button>
 		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  		<ul class="navbar-nav mr-auto">
 		  			<li class="nav-item active">
-			        		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			        		<a class="nav-link" href="{% url 'comparison:comparison' %}">Home <span class="sr-only">(current)</span></a>
 			      		</li>
 			      		<li class="nav-item active">
 			        		<a class="nav-link" href="#">About us</a>
