--- a/comparison/templates/comparison/base.html
+++ b/comparison/templates/comparison/base.html
@@ -1,82 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 {% load static %}
 <head>
-	<title>Comparison</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<style type="text/css">
-		.dropdown-span{
-			text-align: center;
-			color: white;
-			background-color: #5bc0de;
-		}
-		span{
-			color: white;
-		}
-		.footer{
-			text-align: center;
-			position: absolute;
-			padding:10px;
-			color: white;
-			width: 100%;
-			bottom:0;
-		}
-		.alink{
-			text-decoration: none;
-			color: white;
-		}
-		.alink:hover{
-			text-decoration: none;
-			color: white;
-		}
-		#content{
-			padding-bottom: 5%;
-		}
-		html,body{
-			margin: 0;
-		  	padding: 0;
-		  	height: 100%;
-		}
-		.wrapper{
-			position: relative;
-			min-height: 100%;
+    <title>Comparison</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style type="text/css">
+        .dropdown-span {
+            text-align: center;
+            color: white;
+            background-color: #5bc0de;
         }
-	</style>
+
+        span {
+            color: white;
+        }
+
+        .footer {
+            text-align: center;
+            position: absolute;
+            padding: 10px;
+            color: white;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .alink {
+            text-decoration: none;
+            color: white;
+        }
+
+        .alink:hover {
+            text-decoration: none;
+            color: white;
+        }
+
+        #content {
+            padding-bottom: 5%;
+        }
+
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        .wrapper {
+            position: relative;
+            min-height: 100%;
+        }
+    </style>
 </head>
 <body>
-	<div class="wrapper">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			<a class="navbar-brand" href="{% url 'comparison:comparison' %}"><h2>SPT Auto</h2></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  	</button>
-		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  		<ul class="navbar-nav mr-auto">
-		  			<li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'comparison:comparison' %}">Home <span class="sr-only">(current)</span></a>
-			      		</li>
-			      		<li class="nav-item active">
-			        		<a class="nav-link" href="#">About us</a>
-			      		</li>
-		  		</ul>
-		  	</div>
-		</nav>
-		<div id="content" class="container">
-			<br><br><br>
-			{% block content %}
+<div class="wrapper">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="{% url 'comparison:comp' %}"><h2>SPT Auto</h2></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'comparison:comp' %}">Home <span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'comparison:edit_profile' %}">Edit Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'comparison:change_password' %}">Change Password</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'comparison:logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'comparison:login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'comparison:register' %}">Register</a>
+                    </li>
+                {% endif %}
 
-			{% endblock %}
-		</div>
-		<div class="footer bg-primary">
-			<p>&copy SPT Auto 2020</p>
-			<a class="alink" href="#">Privacy policy</a>&nbsp
-			<a class="alink" href="#">Contact us</a>
-		</div>
-	</div>
+            </ul>
+        </div>
+    </nav>
+    <br>
+    <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-warning alert-dismissable" role="alert">
+                    <button class="close" data-dismiss="alert">
+                        <small><sup>x</sup></small>
+                    </button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+        {% block content %}
+        {% endblock %}
+    </div>
+    <div id="content" class="container">
+        <br><br><br>
+    </div>
+    <div class="footer bg-primary">
+        <p>&copy SPT Auto 2020</p>
+        <a class="alink" href="#">Privacy policy</a>&nbsp
+        <a class="alink" href="#">Contact us</a>
+    </div>
+</div>
 </body>
 </html>
