--- a/comparison/templates/comparison/home.html
+++ b/comparison/templates/comparison/home.html
@@ -26,6 +26,9 @@
 
         </form>
         {% else %}
+        <p>Welcome to the SPT Auto Dashboard Portal...</p>
+        <br>
+        <p>Please Register or Login to access the database...</p>
         <a href="{% url 'comparison:login' %}">Login</a>
     {% endif %}
 
