--- a/comparison/templates/comparison/graph.html
+++ b/comparison/templates/comparison/graph.html
@@ -1,37 +1,7 @@
 {% extends 'comparison/base.html' %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Homepage</title>
-
-</head>
-<body>
-{% block content %}
-    <h2>Comparison according to your set preferences</h2>
-    <br>
-    <br>
-    <div>
-        <table style="width:100%; border: 2px solid black;">
-            <tr>
-                <th></th>
-                {% for x in chipset_name %}
-                    <th style="border: 2px solid black;">{{ x.chipset_name }}</th>
-                {% endfor %}
-            </tr>
-
-
-            <tr>
-                {% for value in final_values %}
-                    {% for m in value %}
-                        <td style="border: 2px solid black;">{{ m }}</td>
-                    {% endfor %}
-                    </tr>
-
-                {% endfor %}
-        </table>
-    </div>
-
+<html>
+  <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
@@ -60,10 +30,9 @@
         chart.draw(data, options);
       }
     </script>
-
+      <title>Graphical Representation</title>
+  </head>
+  <body>
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
-
-{% endblock %}
-
-</body>
+  </body>
 </html>
