--- a/comparison/templates/comparison/comparison.html
+++ b/comparison/templates/comparison/comparison.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 {% block content %}
-    <h2>Comparison according to your set preferences</h2>
+    <h2 style="margin-top: 100px">Comparison according to your set preferences</h2>
     <br>
     <br>
     <div>
@@ -45,7 +45,7 @@
 
             var options = {
                 title: 'Comparison for Benchmarks of different Chipsets',
-                vAxis: {title: 'Value'},
+                vAxis: {title: 'Values'},
                 hAxis: {title: 'Chipsets'},
                 seriesType: 'bars',
                 //series: {0: {type: 'line'}}
