--- a/comparison/templates/comparison/home.html
+++ b/comparison/templates/comparison/home.html
@@ -8,7 +8,7 @@
 <body>
 {% block content %}
     {% if user.is_authenticated %}
-        <h2><strong>Hello </strong> {{ user.first_name }}  :)</h2>
+        <h2 style="margin-top: 100px"><strong>Hello </strong> {{ user.first_name }}  :)</h2>
 
         <h3>All the chipset names are here that can be compared as required.</h3>
         <form action="/" method="post" enctype="multipart/form-data" class="post-form">
