--- a/comparison/templates/comparison/comparison.html
+++ b/comparison/templates/comparison/comparison.html
@@ -4,19 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
+    <style type="text/css" media="screen">
+        /*
+        .selectValue {
+            color: #fff;
+            padding: 30px;
+            display: none;
+            margin-top: 30px;
+            width: 60%;
+            background: green;
+        }
+
+        label {
+            margin-right: 20px;
+        }
+         */
+    </style>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
 
 </head>
+
 <body>
 {% block content %}
-    <h2 style="margin-top: 100px">Comparison according to your set preferences</h2>
-    <br>
+    <h2 style="margin-top: 50px">Comparison according to your set preferences</h2>
     <br>
     <div>
         <table style="width:100%; border: 2px solid black;">
             <tr>
-                <th></th>
+                <th>Chipsets/Benchmarks</th>
                 {% for x in chipset_name %}
-                    <th style="border: 2px solid black;">{{ x.chipset_name }}</th>
+                    <th style="border: 2px solid black;">{{ x }}</th>
                 {% endfor %}
             </tr>
 
@@ -30,11 +48,15 @@
 
                 {% endfor %}
         </table>
-        <br><br>
 
+        <br>
+        <br>
     </div>
+    <br>
 
+    <br>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <!-- Combo Chart -->
     <script type="text/javascript">
         google.charts.load('current', {'packages': ['corechart']});
         google.charts.setOnLoadCallback(drawVisualization);
@@ -48,15 +70,169 @@
                 vAxis: {title: 'Values'},
                 hAxis: {title: 'Chipsets'},
                 seriesType: 'bars',
-                //series: {0: {type: 'line'}}
             };
 
             var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
             chart.draw(data, options);
         }
     </script>
-
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
+
+    <br><br>
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['bar']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable({{ test1|safe }});
+
+            var options = {
+                chart: {
+                    title: 'Comparison for Benchmarks of different Chipsets',
+                    vAxis: {title: 'Values'},
+                    hAxis: {title: 'Chipsets'},
+                }
+            };
+
+            var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
+
+            chart.draw(data, google.charts.Bar.convertOptions(options));
+        }
+    </script>
+
+    <div id="columnchart_material" style="width: 800px; height: 500px;"></div>
+
+    <br><br>
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['bar']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable({{ test1|safe }});
+
+            var options = {
+                chart: {
+                    title: 'Comparison for Benchmarks of different Chipsets',
+                    vAxis: {title: 'Values'},
+                    hAxis: {title: 'Chipsets'},
+                },
+                bars: 'horizontal' // Required for Material Bar Charts.
+            };
+
+            var chart = new google.charts.Bar(document.getElementById('barchart_material'));
+
+            chart.draw(data, google.charts.Bar.convertOptions(options));
+        }
+    </script>
+
+    <div id="barchart_material" style="width: 900px; height: 500px;"></div>
+
+    <br><br>
+
+    <!-- Stepped Chart -->
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable({{ test1|safe }});
+
+            var options = {
+                title: 'Comparison for Benchmarks of different Chipsets',
+                vAxis: {title: 'Values'},
+                hAxis: {title: 'Chipsets'},
+                isStacked: true
+            };
+
+            var chart = new google.visualization.SteppedAreaChart(document.getElementById('chart_div1'));
+
+            chart.draw(data, options);
+        }
+    </script>
+    <div id="chart_div1" style="width: 900px; height: 500px;"></div>
+    <br><br>
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable({{ test1|safe }});
+
+            var options = {
+                title: 'Comparison for Benchmarks of different Chipsets',
+                vAxis: {title: 'Values', titleTextStyle: {color: '#333'}},
+                hAxis: {title: 'Chipsets', titleTextStyle: {color: '#332'}},
+                vAxis: {minValue: 0}
+            };
+
+            var chart = new google.visualization.AreaChart(document.getElementById('chart_div2'));
+            chart.draw(data, options);
+        }
+    </script>
+    <div id="chart_div2" style="width: 100%; height: 500px;"></div>
+
+    <br><br>
+    <!-- Line Chart -->
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable({{ test1|safe }});
+
+            var options = {
+                title: 'Comparison for Benchmarks of different Chipsets',
+                vAxis: {title: 'Values'},
+                hAxis: {title: 'Chipsets'},
+                curveType: 'function',
+                legend: {position: 'bottom'}
+            };
+
+            var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+            chart.draw(data, options);
+        }
+    </script>
+    <div id="curve_chart" style="width: 900px; height: 500px"></div>
+
+    <!--
+    <h1>Graph according to your choice</h1>
+    <div>
+        <label style="margin-right: 20px;">
+            <input type="checkbox" name="colorCheckbox" value="graph1"> Graph 1</label>
+        <label style="margin-right: 20px;">
+            <input type="checkbox" name="colorCheckbox" value="graph2"> Graph 2</label>
+        <label style="margin-right: 20px;">
+            <input type="checkbox" name="colorCheckbox" value="graph3"> Graph 3</label>
+        <label style="margin-right: 20px;">
+            <input type="checkbox" name="colorCheckbox" value="graph4"> Graph 4</label>
+    </div>
+
+    <div class="graph1" style="color: #fff; padding: 30px; display: none; margin-top: 30px; width: 60%; background: green;">
+        <strong>GRAPH 1</strong>
+    </div>
+    <div class="graph2" style="color: #fff; padding: 30px; display: none; margin-top: 30px; width: 60%; background: green;">
+        <strong>GRAPH 2</strong>
+    </div>
+    <div class="graph3" style="color: #fff; padding: 30px; display: none; margin-top: 30px; width: 60%; background: green;">
+        <strong>GRAPH 3</strong>
+    </div>
+    <div class="graph4" style="color: #fff; padding: 30px; display: none; margin-top: 30px; width: 60%; background: green;">
+        <strong>GRAPH 4</strong>
+    </div>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('input[type="checkbox"]').click(function () {
+                var inputValue = $(this).attr("value");
+                if ($(this).is(":checked"))
+                    $("." + inputValue).show();
+                else
+                    $("." + inputValue).hide();
+            });
+        });
+    </script>
+    -->
 
 {% endblock %}
 
